--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class = "Title">
             <h1>Engineering 1: Assessment 1</h1>
             <h2>Cohort 4 Group 4: FOUR</h2>
-            <h3>by Daniel Bassy, Gracie Dudgeon, Henry Fields, Nissy Katta, Oscar MacDonald, Yakup Ozturk and Hannah Pugh </h3>
+            <h3>by Daniel Bassey, Gracie Dudgeon, Henry Fields, Nissy Katta, Oscar MacDonald, Yakup Ozturk and Hannah Pugh </h3>
         </div>
         <div class = "image">
             <img src = "logo.png" style = "height: 180px;">
