--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             <h3>by Daniel Bassey, Gracie Dudgeon, Henry Fields, Nissy Katta, Oscar MacDonald, Yakup Ozturk and Hannah Pugh </h3>
         </div>
         <div class = "image">
-            <img src = "logo.png" style = "height: 180px;">
+            <img src = "Screenshot 2025-10-04 at 18.54.24.png" style = "height: 180px;">
         </div>
     </div>
     
     <div class = "Deliverables">
         <h1>Deliverables</h1>
         <ul>
-            <li> <a target="_blank"> Requirements </a> </li>
-            <li> <a target="_blank"> Architecture </a> </li>
-            <li> <a target="_blank"> Method selection and planning </a> </li>
-            <li> <a target="_blank"> Risk assessment and mitigation  </a> </li>
-            <li> <a target="_blank"> Implementation </a> </li>
+            <li> <a target="_blank" href = "https://docs.google.com/document/d/1Rssf7AF-VZ8-AxsTISC7FIZk_NYL0bm6JCZN7T5Mcjg/edit?usp=sharing"> Requirements </a> </li>
+            <li> <a target="_blank" href = "https://docs.google.com/document/d/15H0Vl7PiyKjYLsQLO7aWCYuDEqkZGsIGbp1u_t_Znp8/edit?usp=sharing"> Architecture </a> </li>
+            <li> <a target="_blank" href = "https://docs.google.com/document/d/1CbQE1W1QqF26yRIcMgxiN1Ab-zVStgFO9jo5YCLVJFQ/edit?usp=sharing"> Method selection and planning </a> </li>
+            <li> <a target="_blank" href = "https://docs.google.com/document/d/1EdSO258nDiOnUqpsuKsUOvMwZyCFOMo2uLcpnVdmt5w/edit?usp=sharing"> Risk assessment and mitigation  </a> </li>
+            <li> <a target="_blank" href = "https://docs.google.com/document/d/1u1fdyuhxBqFGob7Sghnd2QexLtQov94gU_FGOZ7hA-4/edit?usp=sharing"> Implementation </a> </li>
             <li> <a target="_blank"> Executable JAR </a> </li>
             <li> <a target="_blank"> Version control repository </a> </li>
         </ul>
