--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>by Daniel Bassey, Gracie Dudgeon, Henry Fields, Nissy Katta, Oscar MacDonald, Yakup Ozturk and Hannah Pugh </h3>
         </div>
         <div class = "image">
-            <img src = "Screenshot 2025-10-04 at 18.54.24.png" style = "height: 180px;">
+            <img src = "logo.png" style = "height: 180px;">
         </div>
     </div>
 
