Linked the PDFs

--- a/Implementation.html
+++ b/Implementation.html
@@ -41,7 +41,7 @@
         <div class = "Deliverables-Viewer">
             <div id = "Implementation">
                 <h1 style = "text-align: center;">Implementation</h1>
-                <p>Link to document: <a href = "https://docs.google.com/document/d/1u1fdyuhxBqFGob7Sghnd2QexLtQov94gU_FGOZ7hA-4/edit?usp=sharing" target = "_blank">here</a></p>
+                <p>Link to PDF document: <a href = "https://docs.google.com/document/d/1u1fdyuhxBqFGob7Sghnd2QexLtQov94gU_FGOZ7hA-4/edit?usp=sharing" target = "_blank">here</a></p>
                 
             </div>
         </div>
