--- a/Method selection and planning.html
+++ b/Method selection and planning.html
@@ -41,7 +41,7 @@
         <div class = "Deliverables-Viewer">
             <div id = "Method selection and planning">
                 <h1 style = "text-align: center;">Method selection and planning</h1>
-                <p>Link to document: <a href = "https://docs.google.com/document/d/1CbQE1W1QqF26yRIcMgxiN1Ab-zVStgFO9jo5YCLVJFQ/edit?usp=sharing" target = "_blank">here</a></p>
+                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/107sKpGIwPDqFJ2EwR_YY5ymmYws0271t/view?usp=drive_link" target = "_blank">here</a></p>
             
                 <h2>1. Software Engineering Methods and Tools</h2>
                 <p>A method in software engineering lays out the way a team transforms requirements into an operational system. It gives a basis for design, implementation and testing while handling alteration and risk. 
