--- a/Risk assessment and mitigation.html
+++ b/Risk assessment and mitigation.html
@@ -41,7 +41,7 @@
         <div class = "Deliverables-Viewer">
             <div id = "Risk assessment and mitigation">
                 <h1 style = "text-align: center;">Risk assessment and mitigation</h1>
-                <p>Link to document: <a href = "https://docs.google.com/document/d/1EdSO258nDiOnUqpsuKsUOvMwZyCFOMo2uLcpnVdmt5w/edit?usp=sharing" target = "_blank">here</a></p>
+                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/1vmJgwAq0iSs9Aem2aqV8ubQSx8Lbxf4n/view?usp=drive_link" target = "_blank">here</a></p>
                 
                 <h2>1. Risk Management Process</h2>
                 <p>Handling risks is an important part of measuring success within software engineering. This importance is emphasised for group projects, as many uncertainties can occur in a limited timeframe. <br>
