--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class = "Deliverables-Viewer">
             <div id = "Requirements">
                 <h1 style = "text-align: center;">Requirements</h1>
-                <p>Link to document: <a href = "https://docs.google.com/document/d/1Rssf7AF-VZ8-AxsTISC7FIZk_NYL0bm6JCZN7T5Mcjg/edit?usp=sharing" target = "_blank">here</a></p>
+                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/1WpdfWXYXutqo-ulSwUnkhzck6XxBLsO1/view?usp=drive_link" target = "_blank">here</a></p>
                 <h2>Single Statement of Need</h2>
                 <p>Our Client has requested a single-player game which allows the player to escape a maze, wrapped in the guise of a University. There are three primary objectives for this project which have been outlined by our customer: The user should be able to escape within five minutes; There should be multiple events to interact with, some of which are hidden; There should be an opposing force working against the user. 
                 <br><br>
