--- a/Method selection and planning.html
+++ b/Method selection and planning.html
@@ -263,6 +263,7 @@
                 </table>
 
                 <h3>Gantt Chart</h3>
+                <p>The weekly progress has been measured by a Gantt chart, and is available on the website <a>here</a>.</p>
                 <h3>Resource allocation and Roles</h3>
                 <p>At least one team member will support each work package. The shared ownership of code means that everyone can contribute to any part if they wish, but designated coders give guidance and are responsible for the code overall. All members will help with testing and reviewing documents to keep things consistent and high quality, but also so that everyone is satisfied.</p>
                 <h3>Monitoring and Planning Changes</h3>
