Uploaded UML Class Diagram

--- a/architecture.html
+++ b/architecture.html
@@ -42,8 +42,11 @@
             <div id = "Architecture">
                 <h1 style = "text-align: center;">Architecture</h1>
                 <p>Link to PDF document: <a href = "https://docs.google.com/document/d/15H0Vl7PiyKjYLsQLO7aWCYuDEqkZGsIGbp1u_t_Znp8/edit?usp=sharing" target = "_blank">here</a></p>
-                <p><a href = "https://drive.google.com/file/d/1grPwHUxPNPmczX2jnyGAlFRi6Hsi4ipF/view?usp=drive_link">Diagram 1</a></p>
-                <img src = "Entity Class 1.jpg  ">
+                <div class = "Diagram-Links">
+                    <a href = "#UML Class Diagram">UML Class Diagram</a>
+                </div>
+                <h2 id = "UML Class Diagram">UML Class Diagram</h2>
+                <img src = "UML Class Diagram.drawio.png">
             </div>
         </div>
     </div>
