Updated the Initial Prototype

--- a/architecture.html
+++ b/architecture.html
@@ -50,7 +50,7 @@
                 <img src = "UML Class Diagram.drawio.png">
 
                 <h2 id = "Initial Prototype">Initial Prototype</h2>
-                <img src = "Initital Prototype.jpg">
+                <img src = "Initial Prototype.drawio.png">
             </div>
         </div>
     </div>
