--- a/architecture.html
+++ b/architecture.html
@@ -44,13 +44,15 @@
                 <p>Link to PDF document: <a href = "https://docs.google.com/document/d/15H0Vl7PiyKjYLsQLO7aWCYuDEqkZGsIGbp1u_t_Znp8/edit?usp=sharing" target = "_blank">here</a></p>
                 <div class = "Diagram-Links">
                     <a href = "#UML Class Diagram">UML Class Diagram</a>
-                    <a href = "#Initial Prototype">Initial Prototpye</a>
+                    <a href = "#Initial Prototype">Initial Prototpyes</a>
                 </div>
                 <h2 id = "UML Class Diagram">UML Class Diagram</h2>
                 <img src = "UML Class Diagram.drawio.png">
 
-                <h2 id = "Initial Prototype">Initial Prototype</h2>
-                <img src = "Initial Prototype.drawio.png">
+                <h2 id = "Initial Prototype">Initial Prototypes</h2>
+                <img src = "Initial Prototype 1.png">
+                <img src = "Inital Prototype 2.jpg">
+                <img src = "Initial Prototype 3.jpg">
             </div>
         </div>
     </div>
