Added a key to the architecture diagrams

--- a/architecture.html
+++ b/architecture.html
@@ -44,15 +44,39 @@
                 <p>Link to PDF document: <a href = "https://docs.google.com/document/d/15H0Vl7PiyKjYLsQLO7aWCYuDEqkZGsIGbp1u_t_Znp8/edit?usp=sharing" target = "_blank">here</a></p>
                 <div class = "Diagram-Links">
                     <a href = "#UML Class Diagram">UML Class Diagram</a>
-                    <a href = "#Initial Prototype">Initial Prototpyes</a>
+                    <a href = "#Initial Prototype">Initial Prototypes</a>
                 </div>
                 <h2 id = "UML Class Diagram">UML Class Diagram</h2>
                 <img src = "UML Class Diagram.drawio.png">
 
                 <h2 id = "Initial Prototype">Initial Prototypes</h2>
-                <img src = "Initial Prototype 1.png">
-                <img src = "Inital Prototype 2.jpg">
-                <img src = "Initial Prototype 3.jpg">
+                
+                <table>
+                    <tr>
+                            <th>Key</th>
+                            <th>Definition</th>
+                    </tr>
+                    <tr>
+                        <td>M</td>
+                        <td>Method</td>
+                    </tr>
+                    <tr>
+                        <td>IM</td>
+                        <td>Implemented Method</td>
+                    </tr>
+                    <tr>
+                        <td>UM</td>
+                        <td>Unimplemented Method</td>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td>Attribute</td>
+                    </tr>
+                </table>
+
+                <img src = "Initial Prototype 1.png" style = "padding: 20px; border: 1px solid black; margin-right: 20px;">
+                <img src = "Inital Prototype 2.jpg" style = "padding: 20px; border: 1px solid black; margin-right: 20px;">
+                <img src = "Initial Prototype 3.jpg" style = "padding: 20px; border: 1px solid black;">
             </div>
         </div>
     </div>
