Updated the Architecture Document

--- a/architecture.html
+++ b/architecture.html
@@ -161,6 +161,14 @@
                 <img src = "Enemy_ State Machine Diagram.drawio.png" style = "padding: 20px; border: 1px solid black;">
                 <img src = "Item_ State Machine Diagram.drawio.png" style = "padding: 20px; border: 1px solid black;">
                 <img src = "Player_ State Machine Diagram.drawio.png" style = "padding: 20px; border: 1px solid black;">
+                <p>The main focus in this design phase was to further modularisation of the Entity class and its functionality. As mentioned in the State Machine Diagrams, we have replaced the Projectiles class with FloorItem. Our plan is that any item in the game will be found on the floor, waiting to be picked up by the player. </p>
+                <img src = "Entity Class 2.png">
+                <h2>Final Design Phase</h2>
+                <p>During the final stretch of the project, we thought it important to create an Entity-Component-System Diagram to show how our three Entities (Player, Enemy, and Item) will work with the LibGDX library. 
+                <br><br>
+                The final UML Class diagram is located <a>here</a>.</p>
+                
+                
             </div>
         </div>
     </div>
