Added a link to the Gantt Chart.

--- a/Method selection and planning.html
+++ b/Method selection and planning.html
@@ -42,8 +42,11 @@
             <div id = "Method selection and planning">
                 <h1 style = "text-align: center;">Method selection and planning</h1>
                 <p>Link to PDF document: <a href = "https://drive.google.com/file/d/107sKpGIwPDqFJ2EwR_YY5ymmYws0271t/view?usp=drive_link" target = "_blank">here</a></p>
-            
-                <h2>1. Software Engineering Methods and Tools</h2>
+                <div class = "Diagram-Links">
+                        <a href = "#Gantt Chart">Gantt Chart</a>
+                </div>
+
+                <h2>Software Engineering Methods and Tools</h2>
                 <p>A method in software engineering lays out the way a team transforms requirements into an operational system. It gives a basis for design, implementation and testing while handling alteration and risk. 
                 <br>
                 There are two main types of methods: plan driven and agile. Plan driven approaches depend on comprehensive planning and documentation. On the other hand, agile techniques emphasise flexibility, brief feedback cycles and functional software. Considering the short time frame allocated for our project and small team size, we will adopt a lightweight agile method inspired by Scrum. This approach encourages continuous adjustment and iterative delivery.
@@ -164,7 +167,7 @@
                     </tr>
                 </table>
 
-                <h2>2. Team Organisation</h2>
+                <h2>Team Organisation</h2>
                 <p>The team is structured to ensure clear responsibilities, effective communication, and balanced workload. Each member has defined roles while sharing accountability for project quality and timely delivery.</p>
                 <h3>Team Roles and Responsibilities</h3>
 
@@ -219,7 +222,7 @@
                     <li>Shared Google Drive for collaborative document editing.</li>
                     <li>Post-sprint reviews to discuss improvements and check off tasks.</li>
                 </ul>
-                <h2>3. Project Plan</h2>
+                <h2>Project Plan</h2>
                 <p>The project plan outlines the key stages, deliverables, and timeline for completing the work. It ensures that tasks are well organised, progress is trackable, and deadlines are achievable within the given timeframe.</p>
                 <h3>Work Breakdown</h3>
 
@@ -262,7 +265,7 @@
                     </tr>
                 </table>
 
-                <h3>Gantt Chart</h3>
+                <h3 id = "Gantt Chart">Gantt Chart</h3>
                 <p>The weekly progress has been measured by a Gantt chart, and is available on the website <a>here</a>.</p>
                 <h3>Resource allocation and Roles</h3>
                 <p>At least one team member will support each work package. The shared ownership of code means that everyone can contribute to any part if they wish, but designated coders give guidance and are responsible for the code overall. All members will help with testing and reviewing documents to keep things consistent and high quality, but also so that everyone is satisfied.</p>
