Uploaded the Gantt Chart.

--- a/Method selection and planning.html
+++ b/Method selection and planning.html
@@ -266,7 +266,8 @@
                 </table>
 
                 <h3 id = "Gantt Chart">Gantt Chart</h3>
-                <p>The weekly progress has been measured by a Gantt chart, and is available on the website <a>here</a>.</p>
+                <p>The weekly progress has been measured by a Gantt chart, and is available on the website <a href = "#Gantt Chart">here</a>. You can click <a target = "_blank" href = "final Gantt chart.png">here</a> to get it as PDF.</p>
+                <img src = "final Gantt chart.png" style = "height: 800px; width: auto">
                 <h3>Resource allocation and Roles</h3>
                 <p>At least one team member will support each work package. The shared ownership of code means that everyone can contribute to any part if they wish, but designated coders give guidance and are responsible for the code overall. All members will help with testing and reviewing documents to keep things consistent and high quality, but also so that everyone is satisfied.</p>
                 <h3>Monitoring and Planning Changes</h3>
