Updated all the links, and finalised the architecture document.

--- a/Implementation.html
+++ b/Implementation.html
@@ -41,8 +41,43 @@
         <div class = "Deliverables-Viewer">
             <div id = "Implementation">
                 <h1 style = "text-align: center;">Implementation</h1>
-                <p>Link to PDF document: <a href = "https://docs.google.com/document/d/1u1fdyuhxBqFGob7Sghnd2QexLtQov94gU_FGOZ7hA-4/edit?usp=sharing" target = "_blank">here</a></p>
-                
+                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/1x3fJgZCY-IBdNWVlRWasGWNrc-cRO1ZS/view?usp=drive_link" target = "_blank">here</a></p>
+                <h2>Libraries Used</h2>
+                <table>
+                    <tr>
+                        <th>Library/Asset</th>
+                        <th>License</th>
+                    </tr>
+                    <tr>
+                        <td>LibGDX</td>
+                        <td>Apache 2.0</td>
+                    </tr>
+                    <tr>
+                        <td>ShapeDrawer</td>
+                        <td>MIT</td>
+                    </tr>
+                    <tr>
+                        <td>JSFXR</td>
+                        <td>The Unilicense</td>
+                    </tr>
+                    <tr>
+                        <td>Music</td>
+                        <td>Pixabay License</td>
+                    </tr>
+                </table>
+                <p>All of the licenses we use above are Open-Source licenses, meaning that we are able to use them without any need for payment. LibGDX and ShapeDrawer have licences that require you credit them when you publish. They are long-term popular licenses, so they are appropriate to use and should be good long-term.
+                <br><br>
+                The graphics, including the tile map and sprites, of the game have been created by Gracie Dudgeon. This means we did not need to get a license, meaning we can use the assets without any limits. Additionally, it has made the game look more like the University, and has given the game a more personalised design.
+                <br><br>
+                All of the sound effects used in-game has been created by Yakup Ozturk, using JSFXR, an 8-bit sound generator. JSFXR is licensed under “The Unlicense”, meaning that all works made using it can be distributed without any source code. It can be used for Private and Commercial use, which is perfect for our use case. 
+                <br><br>
+                The music was downloaded from Pixabay, a royalty free media website. Their license allows us to use content for free without having to credit the author for commercial and private use.
+                <br><br>
+                <h2>Unimplemented Features</h2>
+                Our User Requirement UR_WIN, and FR_MULTIPLE_ENDINGS, said that there should be multiple ways to win the game,  but due to the tight time restrictions we realised that that is not a feature we will be able to implement. This means we only have one way of winning in the game. Additionally, our FR_DIFFICULTY_BALANCE suggesting that we have an option for the players to adjust their difficulty couldn’t be implemented. The game itself is easy enough for beginners, so it should be appropriate for all prospective players. 
+                <br><br>
+                FR_PLAYER_NAVIGATION suggested that we allow the Player to control their character using a controller, which we did not end up implementing. This means that the character is only controllable using the keyboard. 
+                </p>
             </div>
         </div>
     </div>
