--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class = "Deliverables-Viewer">
             <div id = "Requirements">
                 <h1 style = "text-align: center;">Requirements</h1>
-                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/1WpdfWXYXutqo-ulSwUnkhzck6XxBLsO1/view?usp=drive_link" target = "_blank">here</a></p>
+                <p>Link to PDF document: <a href = "https://drive.google.com/file/d/1ZPe3YB1z0vDsslqwJnjb3OHBp0dRgmzz/view?usp=drive_link" target = "_blank">here</a></p>
                 <h2>Single Statement of Need</h2>
                 <p>Our Client has requested a single-player game which allows the player to escape a maze, wrapped in the guise of a University. There are three primary objectives for this project which have been outlined by our customer: The user should be able to escape within five minutes; There should be multiple events to interact with, some of which are hidden; There should be an opposing force working against the user. 
                 <br><br>
@@ -58,6 +58,11 @@
                             <th>ID</th>
                             <th>Description</th>
                             <th>User Requirements</th>
+                    </tr>
+                    <tr>
+                        <td>UR_REQUIRENAME</td>
+                        <td>(Description & Fit Criterion)</td>
+                        <td>NECESSITY</td>
                     </tr>
                     <tr>
                             <td>UR_COMPLETE_ON_TIME</td>
@@ -101,7 +106,7 @@
                     </tr>
                     <tr>
                             <td>UR_ASSETS</td>
-                            <td>We can make our own graphics but it can be creative commons</td>
+                            <td>We can either create our own assets, or use creative commons assets.</td>
                             <td>Shall</td>
                     </tr>
                     <tr>
@@ -109,6 +114,11 @@
                             <td>Don’t make harmful depictions of real people.</td>
                             <td>Shall</td>
                     </tr>
+                    <tr>
+                        <td>UR_AUDIO</td>
+                        <td>We can make our own audio, or use creative commons audio.</td>
+                        <td>Should</td>
+                </tr>
                 </table>
                 <h2>System Requirements</h2>
                 <p>System requirements describe how the game will meet the needs of prospective players from a technical point of view. They will describe how we deliver key functionalities, such as player movement across the map, event completion, and interaction with items that affect the player’s progress. 
