--- a/architecture.html
+++ b/architecture.html
@@ -56,7 +56,7 @@
                 For an Architecture Pattern, we will be using an Entity-Component-Systems Diagram. This is a favoured method in video game development, as it facilitates code reusability, allowing us to save time in the production phase of this project. This is important considering the short amount of time we have. It is an appropriate use case as a lot of the built-in LibGDX classes have to be implemented using composition, such as TextureRegion, Animation<TextureRegion> and OrthographicCamera. We will be using Inheritance for some of the Entities, for example Player and Enemy inherits from Entity. This stops code repetition as the parent class will have a method defined, one example in our code is the fact Entity has the draw method (placing the Entities onto the screen) defined, meaning it doesn’t have to be repeated in the Enemy and Player class. 
                 <br><br>
                 Find the final UML Class diagram <a href = "#UML Class Diagram">here</a>.</p>
-                <p>To create these Structural and Behavioral diagrams, we have decided to use <a href = "draw.io">Draw.io</a>. It is a free, web-based platform that requires no download; which has the functionalities we require. Other options available were either too sophisticated for our needs or required additional external software.</p>
+                <p>To create these Structural and Behavioral diagrams, we have decided to use <a href = "https://app.diagrams.net/">Draw.io</a>. It is a free, web-based platform that requires no download; which has the functionalities we require. Other options available were either too sophisticated for our needs or required additional external software.</p>
                 <h2>Our thoughts when designing the Diagrams</h2>
                 <p>We began by considering the main objects of the game: the Player and the Enemies. These are the principle moving parts of the game. They will share some common methods (such as collision, kill and move) and attributes (such as texture, position, speed). Therefore, we have decided to put them all in the same parent class, reducing code repetition. There will be more in common between the Player and Enemies, than between them and a Projectile. For example, a Projectile does not have HP. So, we have designed an abstract sub-class that contains these extra functionalities, which will be the parent class of the Player and Enemy classes, named LivingThings. 
                 <br><br>
@@ -117,7 +117,7 @@
                 The Texture Component allows the Entity to have an appearance, using one of our created assets. The Sprite Component holds the information about the Entity, the texture, source coordinates and source size. The TextureRegion Component is used to hold the animation frames, and the Animation component is what helps animate the Entities on screen. 
                 </p>
 
-                <img src = "UML Class Diagram.png">
+                <img id = "UML Class Diagram" src = "UML Class Diagram.png">
 
                 <p>
                 Our final UML Class diagram includes specific methods and attributes that aid the classes. We used abstraction to not over-complicate the design process and avoid making specific implementation decisions. For example, as per our FR_PLAYER_NAVIGATION requirement, the Player being able to move is an important part of the game. Prior to this design, we didn’t include the Animation frames, allowing us to change how the Player will move. This requirement is fulfilled with the move method in the Player class.
