--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li> <a href = "/Risk assessment and mitigation.html" > Risk assessment and mitigation  </a> </li>
                 <li> <a href = "/Implementation.html" > Implementation </a> </li>
                 <li> <a target="_blank"> Executable JAR </a> </li>
-                <li> <a target="_blank"> Version control repository </a> </li>
+                <li> <a href = "https://github.com/FOUR-York" target="_blank"> Version control repository </a> </li>
             </ul>
         </div>
     
