--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li> <a href = "/Implementation.html" > Implementation </a> </li>
                 <li> <a href = "FOUR-Game-1.0.0.jar" target = "_blank"> Executable JAR </a> </li>
                 <li> <a href = "https://github.com/FOUR-York/FOUR-Game" target="_blank"> Version control repository </a> </li>
+                <li> <a href = "https://github.com/dlb2323/dlb2323.github.io" target="_blank"> Website Repository </a> </li>
             </ul>
         </div>
     
